--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^12.0.4",
     "express": "^4.17.2",
+    "joi": "^17.5.0",
     "mongoose": "^6.1.6",
     "nodemon": "^2.0.15"
   }
